--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,12 @@
 
 title: "PRESERVING GUERRILLA TELEVISION"
 email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
+description: |
   TVTV pioneered the movement of "do-it-yourself" television and championed the then new,
   radical video formats as a means of changing society, as seen in their writings and
-  videos in our collection.
+  videos in our collection.<br>
+  This preservation project has been funded through a generous Humanities Collections and Reference Resources grant from the
+    <strong>National Endowment for the Humanities</strong>
 baseurl: "/guerrillatv" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: bampfa
