change carousel images

--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -1,4 +1,8 @@
 images:
-  - image: /guerrillatv/assets/images/ar_yellow.png
-  - image: /guerrillatv/assets/images/ar_blue.png
-  - image: /guerrillatv/assets/images/ar_brown.png
+  - image: /guerrillatv/assets/images/nixon.jpg
+  - image: /guerrillatv/assets/images/breakfast.jpg
+  - image: /guerrillatv/assets/images/rather2.jpg
+  - image: /guerrillatv/assets/images/presspass.jpg
+  - image: /guerrillatv/assets/images/convention.jpg
+  - image: /guerrillatv/assets/images/labels.jpg
+  - image: /guerrillatv/assets/images/tv.jpg
