--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -6,3 +6,4 @@ images:
   - image: /guerrillatv/assets/images/convention.jpg
   - image: /guerrillatv/assets/images/labels.jpg
   - image: /guerrillatv/assets/images/tv.jpg
+  - image: /guerrillatv/assets/images/log.jpg
