change carousel aspect ratio to 4:3; modify landing page layout a bit

--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -1,9 +1,10 @@
 images:
-  - image: /guerrillatv/assets/images/nixon.jpg
+  - image: /guerrillatv/assets/images/poster.jpg
   - image: /guerrillatv/assets/images/breakfast.jpg
-  - image: /guerrillatv/assets/images/rather2.jpg
-  - image: /guerrillatv/assets/images/presspass.jpg
+  - image: /guerrillatv/assets/images/nixon.jpg
   - image: /guerrillatv/assets/images/convention.jpg
-  - image: /guerrillatv/assets/images/labels.jpg
-  - image: /guerrillatv/assets/images/tv.jpg
+  - image: /guerrillatv/assets/images/rather2.jpg
   - image: /guerrillatv/assets/images/log.jpg
+  - image: /guerrillatv/assets/images/presspass.jpg
+  - image: /guerrillatv/assets/images/labels.jpg
+  # - image: /guerrillatv/assets/images/tv.jpg
