more tvtv member bios

--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -1,5 +1,6 @@
 images:
   - image: /guerrillatv/assets/images/poster.jpg
+  - image: /guerrillatv/assets/images/hudson-chip-van.jpg
   - image: /guerrillatv/assets/images/breakfast.jpg
   - image: /guerrillatv/assets/images/nixon.jpg
   - image: /guerrillatv/assets/images/convention.jpg
