one more config fix??

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: |
   radical video formats as a means of changing society.<br>
   This preservation project has been funded through a generous Humanities Collections and Reference Resources grant from the
     <strong>National Endowment for the Humanities</strong>
-baseurl: "/guerrillatv" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://guerrillatv.bampfa.berkeley.edu" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: bampfa
 github_username:  bam-pfa
