--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: "PRESERVING GUERRILLA TELEVISION"
+title: "PRESERVING GUERRILLA TELEVISION (beta site)"
 email: your-email@example.com
 description: |
   TVTV pioneered the movement of "do-it-yourself" television and championed
