some content fleshed out more

--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -1,6 +1,7 @@
 images:
   - image: /assets/images/poster.jpg
   - image: /assets/images/hudson-chip-van.jpg
+  - image: /assets/images/beautiful-miami-beach.jpg
   - image: /assets/images/breakfast.jpg
   - image: /assets/images/nixon.jpg
   - image: /assets/images/convention.jpg
