--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,16 @@
 # in the templates via {{ site.myvariable }}.
 
 title: "PRESERVING GUERRILLA TELEVISION"
-email: your-email@example.com
+email: bampfafilmlibrary@berkeley.edu
 description: |
+  TVTV pioneered DIY activist journalism in the 1970s as part of a global <strong>guerrilla video</strong> network.<br>
   This preservation project has been funded through a generous Humanities Collections and Reference Resources grant from the
     <strong>National Endowment for the Humanities</strong>
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://guerrillatv.bampfa.berkeley.edu" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: bampfa
 github_username:  bam-pfa
+title_image: /assets/images/hudson-chip-van.jpg
 
 # ||----------------------||
 # FROM THE ONASIS THEME CONFIG.YAML
@@ -54,6 +56,7 @@ markdown: kramdown
 remote_theme: ohduran/Onassis
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
 
 # Exclude from processing.
 # The following items will not be processed, by default.
