add wltvs tape 25 page; minor styling changes

--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,7 @@
 title: "PRESERVING GUERRILLA TELEVISION"
 email: bampfafilmlibrary@berkeley.edu
 description: |
-  TVTV pioneered DIY activist journalism in the 1970s as part of a global <strong>guerrilla video</strong> network.<br>
-  This preservation project has been funded through a generous Humanities Collections and Reference Resources grant from the
-    <strong>National Endowment for the Humanities</strong>
+  BAMPFA has preserved TVTV's pioneering videos: a major force in the 1970s global <strong>guerrilla video</strong> network.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://guerrillatv.bampfa.berkeley.edu" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: bampfa
