--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://guerrillatv.bampfa.berkeley.edu" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: bampfa
 github_username:  bam-pfa
-title_image: /assets/images/hudson-chip-van.jpg
+title_image: https://guerrillatv.bampfa.berkeley.edu/assets/images/hudson-chip-van.jpg
 google_analytics: UA-8226360-7
 
 # ||----------------------||
