change site description

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: "PRESERVING GUERRILLA TELEVISION"
 email: bampfafilmlibrary@berkeley.edu
 description: |
-  BAMPFA has preserved TVTV's pioneering guerrilla television: a major force in the 1970s global <strong>guerrilla video</strong> network.
+  BAMPFA has preserved pioneering guerrilla television from TVTV: a major force in the 1970s global <strong>guerrilla video</strong> network.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://guerrillatv.bampfa.berkeley.edu" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: bampfa
