--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,7 @@ remote_theme: ohduran/Onassis
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  - multipage-generator
 
 # Exclude from processing.
 # The following items will not be processed, by default.
